data/derived/sp14/progs/unify/prog0294.ml.out
Characters 93-94:
  | b -> if f = b
                ^
Error: This expression has type 'a but an expression was expected of type
         'b -> 'a
       The type variable 'a occurs inside 'b -> 'a
